Added a cache system. Added a download system for the cache. Added a loading screen and login screen using sprites from the cache. Replaced the old shop system, the shop now loads assets from the cache for the shop window - to add sprites for items so they represent what their name. moved all server side code from the client - the client now relys 100% on the server for feed instead of having duplicated logic from the server and the client causing clashes. refactored the client so there are no longer any god classes and functions are nested in their correct categories. Added a definition system - removing all hard coded logic. Added a brand new inventory system - inventory tabs with sprites representing their tab. Added a brand new quest system. Added a brand new woodcutting system, replaced all hard coded trees with definitions and sprites from the cache. Replaced all rocks with cache images - replaced all hard coded logic for mining to use definitions. Added a music system and sound system. Added a full dialogue system.